; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netgraph/bluetooth/l2cap/extr_ng_l2cap_evnt.c_send_l2cap_reject.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netgraph/bluetooth/l2cap/extr_ng_l2cap_evnt.c_send_l2cap_reject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32 }

@NG_L2CAP_CMD_REJ = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@ENOBUFS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, i32, i32)* @send_l2cap_reject to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_l2cap_reject(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %14, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* @NG_L2CAP_CMD_REJ, align 4
  %18 = call %struct.TYPE_5__* @ng_l2cap_new_cmd(i32 %15, i32* null, i32 %16, i32 %17, i32 0)
  store %struct.TYPE_5__* %18, %struct.TYPE_5__** %14, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %20 = icmp eq %struct.TYPE_5__* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %6
  %22 = load i32, i32* @ENOMEM, align 4
  store i32 %22, i32* %7, align 4
  br label %49

23:                                               ; preds = %6
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %13, align 4
  %34 = call i32 @_ng_l2cap_cmd_rej(i32* %26, i32 %29, i32 %30, i32 %31, i32 %32, i32 %33)
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 0
  %37 = load i32*, i32** %36, align 8
  %38 = icmp eq i32* %37, null
  br i1 %38, label %39, label %43

39:                                               ; preds = %23
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %41 = call i32 @ng_l2cap_free_cmd(%struct.TYPE_5__* %40)
  %42 = load i32, i32* @ENOBUFS, align 4
  store i32 %42, i32* %7, align 4
  br label %49

43:                                               ; preds = %23
  %44 = load i32, i32* %8, align 4
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %46 = call i32 @ng_l2cap_link_cmd(i32 %44, %struct.TYPE_5__* %45)
  %47 = load i32, i32* %8, align 4
  %48 = call i32 @ng_l2cap_lp_deliver(i32 %47)
  store i32 0, i32* %7, align 4
  br label %49

49:                                               ; preds = %43, %39, %21
  %50 = load i32, i32* %7, align 4
  ret i32 %50
}

declare dso_local %struct.TYPE_5__* @ng_l2cap_new_cmd(i32, i32*, i32, i32, i32) #1

declare dso_local i32 @_ng_l2cap_cmd_rej(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ng_l2cap_free_cmd(%struct.TYPE_5__*) #1

declare dso_local i32 @ng_l2cap_link_cmd(i32, %struct.TYPE_5__*) #1

declare dso_local i32 @ng_l2cap_lp_deliver(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
